# EMS

./: .gitignore  DEVICE_PAGES_ANALYSIS.md  DEVICE_REFACTORING_PROPOSAL.md  HOOKS_ANALYSIS.md  README.md  ROUTING_UPDATE_PROPOSAL.jsx  WARP.md  docker-compose.yml
Config/: config.ini
Shared/: command.json  config.ini
WebServer/: .dockerignore  .gitignore  Dockerfile  INTEGRATION_TEST.md  README.md  REFACTORING_AUTH_HOOKS.md  REFACTORING_DEVICE_CONFIG.md  package-lock.json  package.json  postcss.config.mjs  rsbuild.config.mjs
WebServer/src/: App.css  App.jsx
gatewayApi/: .env.local  DEVICE_TEST_PAYLOAD.md  Dockerfile  README.md  main.py  pyproject.toml
gatewayApi/src/: app.py
gatewayApi/src/auth/: dependencies.py  jwt_handler.py  security.py
gatewayApi/src/config/: config.ini  config.py
gatewayApi/src/core/: config.py
gatewayApi/src/database/: connection.py
gatewayApi/src/models/: model.py
gatewayApi/src/repositories/: repository.py  user_repository.py
gatewayApi/src/routes/: device.py  login.py
gatewayApi/src/scripts/: init_admin.py
gatewayApi/src/services/: service.py  user_service.py
gatewayApi/src/src/config/: config.ini
gatewayApi/src/util/: logging.py
gatewayEMS/: Dockerfile  README.md  main.py  pyproject.toml
gatewayEMS/config/: config.ini  config.py
gatewayEMS/src/config/: config.ini  config.py
gatewayEMS/src/core/: config.py  watchdog.py
gatewayEMS/src/modbus/: conect.py  modbus.py  read.py
gatewayEMS/src/modbus/map/: Modbus_DTSU666.json
gatewayEMS/src/utils/: logging.py
mosquitto/config/: mosquitto.conf
(+106 files in other folders)
